midiframe/app/javascript/stylesheets/application.scss
@import "materialize-css/dist/css/materialize";
@import "video.js/dist/video-js.css";

/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

.text-center {
  text-align: center;
}

html {
  background-color: #1f1f1f !important;
  color: white !important;
}

span {
  padding-left: 10px;
  padding-right: 10px;
}

/* for keyboard */

span.note-title {
  padding: 0px;
  letter-spacing: 1;
}

/* PROJECTS */

#newProject, #deleteProject, #new_pattern_button, #create_new_pattern, #previewProject, #settings_button, #recordButton {
  float: right;
  margin: 20px;
}

.hidden {
  display: none;
}

.visible {
  display: inherit;
}

body, a#upload_video_button, a#upload_font_button {
  letter-spacing: 3px !important;
}

h1 {
  letter-spacing: 13px;
  padding: 0px 10px 0px 10px;
}

video.video_preview {
  width: 100%;
}

/* PATTERN */

div#pattern-container {
  height: 60%;
  width: 100%;
}

/* PIANO */

/* * {
  box-sizing:border-box
} */

/* piano keys */

ul {
  padding: 0;
  width: 100%;
  display: table;
  table-layout: fixed;
  /* optional */
}

ul li {
  display: table-cell;
  width: auto;
  text-align: center;
}

li.grey input[type='text'] {
  color: white !important;
}

li.white input[type='text'] {
  color: #8a8a8a !important;
}

li input[type="text"]:focus, li input[type="text"] {
  border-bottom: none!important;
  box-shadow: none!important;
}

li input[type='text'] {
  font-size: 10px !important;
  text-align: center;
  margin-bottom: 0px !important;
}

li:last-child {
  border-right: 1px solid#262626;
}

li.grey {
  box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset,0 -2px 2px 3px rgba(0,0,0,0.6) inset,0 1px 2px rgba(0,0,0,0.5);
  background:linear-gradient(to top,#444 0%,#222 100%);
  color: #e0e0e0 !important;
  background-color: black;
  border:1px solid #000;
  border-radius:0 0 3px 3px;
}

li.white {
  box-shadow: -1px -1px 2px rgba(125, 125, 125, 0.2) inset, 0 -2px 2px 3px rgba(148, 138, 127, 0.6) inset, 0 1px 2px rgba(0, 0, 0, 0.5);
  background: linear-gradient(90deg, rgba(226,226,226,1) 0%, rgba(251,251,251,1) 48%, rgba(230,230,230,1) 100%);
  color: #656565 !important;
  border:1px solid rgb(77, 76, 76);
  border-radius:0 0 5px 5px;
}

li.grey.active, li.grey.selected {
  /* this gives you those definition lines on the piano keys  */
  box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset,0 -2px 2px 3px rgba(0,0,0,0.6) inset,0 1px 2px rgba(0,0,0,0.5);
  background-color: #6666;
  background:linear-gradient(to top,rgb(0,128,128) 0%,#222 100%);
}

li.white.active, li.white.selected {
  box-shadow:-1px -1px 2px rgba(66, 115, 134, 0.2) inset,0 -2px 2px 3px rgba(84, 84, 84, 0.6) inset,0 1px 2px rgba(92, 92, 92, 0.5);
  border-top:1px solid #777 !important;
  border-left:1px solid rgb(116, 116, 116) !important;
  border-bottom:1px solid rgb(87, 87, 87) !important;
  background:linear-gradient(to top,rgb(0,128,128) 0%,rgb(255, 255, 255) 100%);
}

li.white.selected input[type="text"]:focus {
  color: white !important;
}


#octave-minus {
  float: left;
  margin: 10px;
}

#octave-plus {
  float: right;
  margin: 10px;
}

/* overides */

.progress{
  background-color: #a0a0a0 !important;
  border-radius: initial;
  height: 3px !important;
}

.progress .determinate {
  background-color: black !important;
  
}

.progress .indeterminate {
  background-color: black !important;
}

a.project-item, div.pattern-item {
  color: white !important;
  background-color: #1F1F1F !important;
  transition: background-color 1s;
}

a.project-item:hover, li.pattern-item:hover {
  background-color: #444444 !important;
}

div.card-panel {
  background-color: #3e3f40 !important;
}

input[type="text"]{
  color: white !important;
}

/* record and complete in octave button */

a#record , a#complete, a#save, a#settings, a#adjust, a#format, a#random_all, a#random_one, a#select_mode, a#clear_all {
  margin-right: 10px;
  top: 9px;
}

a.pattern-link {
  color: white;
}

a#record.open-recording-session i {
  color: red;
}

.pattern-settings-link {
  color: white;
  font-style: italic;
}

.page-title {
  margin-left: 28px;
}

.channel-input {
  display: grid;
  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
}

.channel-box {
  margin: 2px;
  border: 1px solid rgb(255, 255, 255); 
  padding: 10px;
  text-align: center !important;
  font-size: 10px !important;
}

.step-input {
  display: grid;
  grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
}

.step-box {
  margin: 2px;
  border: 1px solid rgb(255, 255, 255); 
  padding: 10px;
  text-align: center !important;
  font-size: 10px !important;
}


div.unselected {
  background-color: transparent !important;
}

.card-panel.z-depth-5 {
  width: 96%;
  margin: 0 auto;
  background-color: #303030 !important;
}

.channel-box, .step-box {
  transition: background-color 0.5s ease;
  cursor: pointer;
}

.channel-box:hover, .step-box:hover{background-color: #995151;}

#midi-file, #midi-file-name {
  margin-top: 12px !important;
}

a#upload-midi {
  margin-top: 13px;
}

span#upload-midi-name {
    position: relative;
    top: 7px;
    letter-spacing: 3px;
}

a#midi-save {
  position: relative;
  float: right;
  top: 12px;
  right: 2px;
}

a#toggle-select-mode {
  cursor: pointer !important;
  margin-left: 20px;
}

i.pattern-settings-icons{
  font-size:13px;
  position: relative;
  top: 2px;
}

li.white.selected input {
  color: white !important;
}

.dotted {
  border: 1px dotted white;
}


#note-text-text {
  position: absolute;
  font-size: 70px;
  z-index: 10;
  text-align: center;
}

.vjs-big-play-button{
  visibility: hidden;
}

a.collection-item.project-item {
  padding-left: 26px;
}

nav ul li {
  float: right !important;
  padding: 0;
}

video.video_preview {
  padding: 25px;
}

p.notice, p.alert {
  padding: 0px !important;
  position: relative;
  bottom: 30px !important;
  margin-top: 0px !important;
  text-align: center;
  font-size: 17px;
  z-index: 10000;
}

.alert {
  background-color: rgb(226, 132, 43);
}

.notice {
  background-color: rgb(84, 175, 32);
}

div.signup-links {
  padding-left: 31px;
  padding-top: 20px;
  font-size: 16px;
  color: aliceblue !important;
}

.auth-form {
  font-size: 13px !important;
}

input#user_email, input#user_password, input#user_password_confirmation {
  color: white;
}

#splash{
  width: 100%;
  position: relative;
}

img#splash, video#video-splash {
  position: absolute;
  top: 65px;
  left: 0;
}
video#video-splash {
width: 100%;
}
nav {
  z-index: 1;
  position: relative;
}

div.splash-text{
  position: absolute;
  margin-left: 20px;
  visibility: hidden;
}

p.splash-par{
  letter-spacing: 0px;
  font-size: 17px;
}

div#overlay{
  background-color: black;
  position: fixed;
  top: 0;
  z-index: 300;
  height: 100%;
  width: 100%;
}

div.video-card {
  width:30%;
  // padding-bottom: 10%;
  // margin-bottom: 14%;
  align-self: center;
}

.video-collection {
  display: grid;
  grid-template-columns: auto auto auto;
  // justify-items: center;
  flex-wrap: wrap;
  // justify-content: center;
}

.card.video-card {
  background-color: rgb(63, 63, 63);
}

span.card-title {
  background: black;
  border: 1px solid;
}

